tests/paczka1/fuzzy1/83716764.err
Error in line 10: Vopd44Wp7IJ A522 29,6
Error in line 19: A522 A411 -1,9
